--- a/layouts/index.html
+++ b/layouts/index.html
@@ -61,6 +61,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="#"><i class="fab fa-github"></i>GitHub</a>                    
                     </li>
+                </ul>
+
+                <ul class="nav justify-content-center">
                     <li class="nav-item">
                         <a class="nav-link active" href="#"><i class="fas fa-code"></i>Projects</a>                    
                     </li>
@@ -79,7 +82,35 @@
                 <h3 class="display-8 text-center">Project Highlights</h3>
             </div>
         </div>
-    </div>
+
+        {{ range first 10 .Site.Pages }}
+            <p>bla</p>
+            {{ .Title }}
+        {{ end }}
+
+        <!--
+        <div class="row mt-4">
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">My Project #1</h5>
+                        <p class="card-text">A short description.</p>
+                        <a href="#" class="btn btn-primary">Check it out</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">My Project #2</h5>
+                        <p class="card-text">A short description.</p>
+                        <a href="#" class="btn btn-primary">Check it out</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
