--- a/layouts/index.html
+++ b/layouts/index.html
@@ -36,22 +36,42 @@
 
         <!-- Link to stylesheets -->
         <link rel="stylesheet" href="main.css">
+
+        <!-- Load Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     </head>
     
     <!-- The body element contains all the content that displays on the page. -->
     <body>
-        <div class="container">
+        <div class='super-container'>
             <div></div>
-            <div class="content-body-grid">
-                <div class='site-logo'>
-                    <img class='site-logo-img' src='site-logo.png'>
+            <div class="container">
+                <div class="content-body-grid">
+                    <div class='site-logo'>
+                        <img class='site-logo-img' src='site-logo.png'>
+                    </div>
+                    <div class='social'>
+                        <h1 class='page-title'>Coding Beagle</h1>
+                        <h2 class='page-subtitle'>Paws to the keyboard!</h2>
+                        <div class='social-media-container'>
+                            <!-- 
+                                A table can be an easy way to list content like images next to each other, by styling the list items to be
+                                inline, with float: left
+                            -->
+                            <ul>
+                                <li><img class='social-media-icon' src="/linkedin.svg"></li>
+                                <li><img class='social-media-icon' src="/github.svg"></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class='menu'>
+                    </div>
+                    <div class='articles'>
+                    </div>
                 </div>
-                <div class='social'>
-                </div>
-                <div class='menu'>
-                </div>
-                <div class='articles'>
-                </div>
+                <div class='site-articles'></div>
             </div>
             <div></div>
         </div>
