--- a/static/main.css
+++ b/static/main.css
@@ -1,42 +1,86 @@
+.page-title {
+    font-family: 'Lora', serif;
+    color: #f78769;
+    font-size: 3.052em;
+    text-decoration: none;
+    font-weight: bold;
+    font-style: italic;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    text-align: center;
+}
+
+.page-subtitle {
+    font-family: 'Lora', serif;
+    font-size: 18px;
+    font-style: italic;
+    font-weight: normal;
+    color: #bbbbbb;
+    text-align: center;
+    margin-top: 0.5em;
+    margin-bottom: 0px;
+}
+
 body {
     background-color: #f3f3f3;
 }
 
-.homepage-title {
-    color: red;
-}
-
-.container {
+.super-container {
     margin-top: 2%;
     display: grid;
-    grid-template-columns: 25% 50% 25%;
-    grid-template-rows: 100%;
+    grid-template-columns: 1fr 60% 1fr;
+    grid-template-rows: 1fr 1fr;
 }
 
 @media (max-width: 800px) {
-    .container {
-        grid-template-columns: 1fr 8fr 1fr;
+    .super-container {
+        margin-top: 0px;
+        grid-template-columns: 1fr 16fr 1fr;
     }
 }
 
+.container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+    'main'
+    'articles'
+}
+
 .content-body-grid {
+    grid-area: main;
     display: grid;
     background-color: white;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 0.5fr 0.25fr 1.0fr;
     justify-items: center;
     /* https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Grid_Template_Areas */
     grid-template-areas:
     'logo'
     'social'
     'menu'
-    'articles'
+}
+
+.articles {
+    grid-area: articles;
+    display: grid;
 }
 
 .site-logo {
+    display: grid;
+    align-items: center;
     grid-area: logo;
     width: 35%;
-    height: 100%;
+}
+
+.site-logo-img {
+    /*
+        object-fit property sets how content of a replaced element (such as img) should be resized to fit its container.
+        The 'cover' value will scale the content to maintain its aspect ratio while fitting within the element's content box.
+    */
+    object-fit: cover;
+    width: 100%;
 }
 
 .social {
@@ -51,15 +95,24 @@ body {
     grid-area: articles;
 }
 
-.site-logo-img {
-    width: 100%;
-    height: 100%;
+.social-media-container {
+    margin-top: 0px;
+    display: grid;
+    justify-items: center;
 }
 
-/*
-.menu {
-    display: grid;
-    grid-template-columns: 25% 1fr 1fr 1fr 25%;
-    grid-template-rows: 1fr;
-    justify-items: center;
-}*/
+.social-media-icon {
+    width: 35px;
+}
+
+ul {
+    padding: 0px;
+}
+
+li {
+    display: inline;
+    float: left;
+    margin-left: 0.4em;
+    margin-right: 0.4em;
+    padding: 0px;
+}
