--- a/layouts/index.html
+++ b/layouts/index.html
@@ -73,12 +73,21 @@
                     <div class='menu'>
                         <ul class='menu-list'>
                             <li><a href="#">ARTICLES</a></li>
-                            <li><a href="#">PROJECTS</a></li>
+                            <li><a href="#">SOFTWARE</a></li>
+                            <li><a href="#">DRAWINGS</a></li>
                             <li><a href="#">ABOUT</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class='site-articles'></div>
+                <div class='site-articles'>
+                    <div class='article-entry'>
+                        <h1 class='article-entry-header'>Test Header</h1>
+                        <ul class='article-entry-meta'>
+                            <li>date</li>
+                            <li>author</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
             <div></div>
         </div>
