--- a/layouts/index.html
+++ b/layouts/index.html
@@ -86,6 +86,9 @@
                             <li>date</li>
                             <li>author</li>
                         </ul>
+                        <div>
+                            <p class='article-entry-summary'>Summary of article...</p>
+                        </div>
                     </div>
                 </div>
             </div>
