started work on portfolio section!

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -77,7 +77,7 @@
                     <div class='menu'>
                         <ul class='menu-list'>
                             <li><a href="{{ .Site.BaseURL }}">ARTICLES</a></li>
-                            <li><a href="#">SOFTWARE</a></li>
+                            <li><a href="{{ .Site.BaseURL }}">PORTFOLIO</a></li>
                             <li><a href="#">DRAWINGS</a></li>
                             <li><a href="#">ABOUT</a></li>
                         </ul>
