--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -77,9 +77,9 @@
                     <div class='menu'>
                         <ul class='menu-list'>
                             <li><a href="{{ .Site.BaseURL }}">ARTICLES</a></li>
-                            <li><a href="{{ .Site.BaseURL }}">PORTFOLIO</a></li>
-                            <li><a href="#">DRAWINGS</a></li>
-                            <li><a href="#">ABOUT</a></li>
+                            <li><a href="{{ .Site.BaseURL }}/portfolio">PORTFOLIO</a></li>
+                            <!--<li><a href="{{ .Site.BaseURL }}">DRAWINGS</a></li>-->
+                            <li><a href="{{ .Site.BaseURL }}">ABOUT</a></li>
                         </ul>
                     </div>
                 </div>
