--- a/layouts/portfolio/list.html
+++ b/layouts/portfolio/list.html
@@ -1,4 +1,24 @@
 {{ define "main" }}
-This is for portfolio items!
-{{ .Content }}
+
+<div class="portfolio-intro">
+    {{ .Content }}
+</div>
+
+<div class="portfolio-grid-wrapper">
+    <div></div>
+    <div class="portfolio-grid">
+    {{ range .Pages }}
+        <a href="{{ .Permalink }}">
+            <div class="portfolio-entry">
+                <div class="portfolio-entry-title">
+                    <h2>{{ .Title }}</h2>
+                </div>
+                <img class="site-logo-img" src="{{ .Site.BaseURL }}portfolio-thumbs/test.png">
+            </div>
+        </a>
+    {{ end }}
+    </div>
+    <div></div>
+</div>
+
 {{ end }}
