--- a/static/main.css
+++ b/static/main.css
@@ -252,3 +252,66 @@ ul.menu-list a:hover {
     padding-right: 15%;
     color: #555555;
 }
+
+.portfolio-intro p {
+    font-family: 'Lora', serif;
+    font-size: 16px;
+    text-align: center;
+    color: #777777;
+    font-weight: normal;
+}
+
+.portfolio-grid-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 60% 1fr;
+}
+
+.portfolio-grid {
+    display: grid;
+    justify-items: center;
+    justify-content: center;
+    grid-gap: 25px;
+    grid-template-columns: repeat(
+        auto-fit,
+        minmax(300px, max-content)
+    );
+}
+
+.portfolio-entry {
+    /* 
+        Since we use position: absolute in the portfolio-entry-title,
+        we have to use a position property other than position: static (which is default)
+        to make a div with portfolio-entry the containing block!
+        https://developer.mozilla.org/en-US/docs/Web/CSS/Containing_block
+    */
+    position: relative;
+}
+
+.portfolio-entry-title {
+    /*
+        Absolute for position removes the element from the normal document flow.
+        No space is created for the element in the page layout.
+        The element is positioned relative to its closest positioned ancestor, otherwise,
+        It is placed relative to the initial "containing block".
+    */
+    position: absolute;
+    width: 100%;
+    height: 25%;
+    background-color: rgba(0, 0, 0, 0.35);
+
+    /* These 4 properties is used to center text vertically and horizontally */
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    flex-direction: column;
+}
+
+.portfolio-entry-title h2 {
+    font-family: 'Lora', serif;
+    font-style: italic;
+    font-weight: bold;
+    color:white;
+    margin: 0px;
+    padding: 0px;
+    text-align: center;
+}
