added about me page

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -79,7 +79,7 @@
                             <li><a href="{{ .Site.BaseURL }}">ARTICLES</a></li>
                             <li><a href="{{ .Site.BaseURL }}/portfolio">PORTFOLIO</a></li>
                             <!--<li><a href="{{ .Site.BaseURL }}">DRAWINGS</a></li>-->
-                            <li><a href="{{ .Site.BaseURL }}">ABOUT</a></li>
+                            <li><a href="{{ .Site.BaseURL }}/about">ABOUT</a></li>
                         </ul>
                     </div>
                 </div>
