--- a/static/main.css
+++ b/static/main.css
@@ -81,7 +81,7 @@ body {
     margin-left: 10%;
     margin-right: 10%;
     border-color: #bbbbbb;
-    border-bottom-style: solid;
+    border-bottom-style: dashed;
     border-bottom-width: 0.1em;
 }
 
