fixing mobile device media queries

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -18,6 +18,8 @@
         <!-- charset specifies the character set for your document. In this caser, UTF-8. -->
         <meta charset="utf-8">
 
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <!-- 
             Things such as the meta data description for your page can be used for Search Engine Optimization (SEO), as some meta data for your page has the potential
             to make your page appear higher in relevant searches performed in search engines.
